--- a/index.html
+++ b/index.html
@@ -13,59 +13,59 @@
 
 
     <button onclick="l1()">1.Maior Número</button>
-    <script src="script.js">
+    <script src="js.js">
 
     </script>
 
     <button onclick="l2()">2.Positivo ou Negativo</button>
-    <script src="script.js">
+    <script src="js.js">
 
     </script>
 
     <button onclick="l3()">3.Maior Entre 3</button>
-    <script src="script.js">
+    <script src="js.js">
 
     </script>
 
     <button onclick="l4()">4.Soma dos Números </button>
-    <script src="script.js">
+    <script src="js.js">
 
     </script>
 
     <button onclick="l5()">5.Media Aritmética</button>
-    <script src="script.js">
+    <script src="js.js">
 
     </script>
 
     <button onclick="l6()">6.Primeiro, Ultimo e Maior Número</button>
-    <script src="script.js">
+    <script src="js.js">
 
     </script>
 
     <button onclick="l7()">7.Leia 6 numeros e some os menores de 72</button>
-    <script src="script.js">
+    <script src="js.js">
 
     </script>
 
     <button onclick="l8()">8.Media de 4 numeros</button>
-    <script src="script.js">
+    <script src="js.js">
 
     </script>
 
     <button onclick="l9()">9.Você pode votar?</button>
-    <script src="script.js">
+    <script src="js.js">
 
     </script>
 
 
     <button onclick="l10()">10.Peso ideal</button>
-    <script src="script.js">
+    <script src="js.js">
 
     </script>
 
 
     <button onclick="l11()">11.Mini calculadora</button>
-    <script src="script.js">
+    <script src="js.js">
 
     </script>
 
